--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   username: root
   password:
   host: localhost
-  database: furima-39629_development
+  database: furima_39629_development
 
 test:
   <<: *default
@@ -16,7 +16,7 @@ test:
   username: root
   password:
   host: localhost
-  database: furima-39629_test
+  database: furima_39629_test
 
 production:
   <<: *default
