--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -79,3 +79,6 @@ Style/FrozenStringLiteralComment:
 # メソッドパラメータ名の最小文字数を設定
 Naming/MethodParameterName:
  MinNameLength: 1
+
+AllCops:
+  NewCops: enable
